# hakyll-blog

./: .gitignore  LICENSE  README.md  hakyll-blog.cabal  site.hs  stack.yaml
Hakyll/Web/: Agda.hs
_site/: archive.html
_site/posts/: 2015-08-23-example.html  Decidable.lagda.html
docs/: about.html  archive.html  contact.html  index.html
docs/posts/: AgdaTest.lagda.html  deBruijn.lagda.html
posts/: AgdaTest.lagda.md  Decidable.lagda.md  deBruijn.lagda.md
templates/: default.html
