cabal-version:       2.2
name:                hakyll-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oshmkufa2010/hakyll-blog#readme
license-file:        LICENSE
author:              cailin
maintainer:          cailinunix@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    Agda,
    hakyll,
    directory,
    filepath,
    regex-tdfa,
    text,
    temporary-rc

executable hakyll-blog
  import: shared-properties
  main-is:             site.hs
  ghc-options:         -threaded
  build-depends:      hakyll-blog
  other-modules: Hakyll.Web.Agda

library
  import: shared-properties
  exposed-modules: Hakyll.Web.Agda
